Fix homepage layout issues

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -94,7 +94,8 @@
 
 
     @media (max-width: $bp-lg) {
-      margin-left: auto;
+      margin: auto;
+      margin-right: -1rem;
       font-size: 0.7rem;
 
     }
