--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -21,8 +21,8 @@ main {
     filter: brightness(0.2);
 
     @media (max-width:767px) {
-        height: 200vh;
-        object-position: center;
+        height: 100%;
+        object-position: bottom;
 
     }
 }
@@ -35,6 +35,7 @@ main {
     text-align: left;
 
     @media (max-width:767px) {
+
         padding-top: 1rem;
     }
 
@@ -76,7 +77,7 @@ main {
             display: grid;
             grid-template-columns: 1fr 1fr;
             justify-content: center;
-            gap: 2rem;
+            gap: 1rem;
             margin-top: 2rem;
 
 
@@ -144,6 +145,11 @@ main {
 .about-title {
     margin-top: 6rem;
 
+    @media (max-width: 767px) {
+        margin-top: 2rem;
+        line-height: 0;
+    }
+
 }
 
 #about {
@@ -162,6 +168,16 @@ main {
 
     @media (max-width: 767px) {
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        img {
+            margin-left: 0rem;
+            order: -1;
+            border-radius: 10%;
+            margin-block: 2rem;
+
+        }
 
     }
 
